Bug 61254 - tp_message_to_text() does not flag delivery reports with bodies as Non_Text_Content
Summary: tp_message_to_text() does not flag delivery reports with bodies as Non_Text_C...
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: tp-glib (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: Will Thompson
QA Contact: Telepathy bugs list
URL:
Whiteboard: review+
Keywords: patch
Depends on:
Blocks: 43166
  Show dependency treegraph
 
Reported: 2013-02-21 23:56 UTC by Will Thompson
Modified: 2013-04-14 10:57 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Always flag delivery reports with Non_Text_Content (4.44 KB, patch)
2013-02-22 00:14 UTC, Will Thompson
Details | Splinter Review

Description Will Thompson 2013-02-21 23:56:14 UTC
From bug 43166:

> > Unfortunately it exposes a
> > tp-glib bug/issue: the legacy Received signal gets the text of the error
> > from the server (which seems fine) but loses the Non_Text_Content flag
> > (because there is text content).
> 
> Hmm. I think the solution to this is probably that Message_Type_Delivery_Report
> should trigger Non_Text_Content? In my original draft of DeliveryReports, they
> would have had { 'interface': '...DeliveryReports' } in the header, which I
> think does trigger Non_Text_Content, but that was lost when delivery reports
> became a core part of Messages in a later draft.
> 
> This might be a bit more significant than it looks, because on the client side,
> telepathy-glib Messages clients use the same code to make tp_message_to_text()
> output Non_Text_Content if necessary.
Comment 1 Will Thompson 2013-02-22 00:14:21 UTC
Created attachment 75273 [details] [review]
Always flag delivery reports with Non_Text_Content
Comment 2 Simon McVittie 2013-02-22 12:06:04 UTC
Comment on attachment 75273 [details] [review]
Always flag delivery reports with Non_Text_Content

Review of attachment 75273 [details] [review]:
-----------------------------------------------------------------

Yes please
Comment 3 Will Thompson 2013-04-14 10:57:44 UTC
Merged for 0.20.3 and 0.21.1.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.