Always flag delivery reports with Non_Text_Content

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=61254